SQuirreL SQL Client Change Log
==============================

Not yet released - available from CVS or in the latest snapshot:
----------------------------------------------------------------

Enhancements: 

 - New Plugin: SQLReplace by Dieter Engelhardt
   This plugin replaces a set of variables before a statement is executed.
   The variables to replace can be defined at the Plugin's Global Preferences tab.  

 - Added a preference option to allow the selection of items in lists to change while activating
   the popup menu on a single right-mouse button click.  For example, without this, you need to 
   select an object in the tree with a left mouse button click, then press the right mouse button 
   to activate the popup menu.(See Global Preferences -> General -> Select On Right Mouse Click)

Data Import Plugin: It now warns the user when importing data into an existing table, that it's current data 
                    will be truncated first.

DB2 Plugin: Lars Heller provided a patch to add support for XML column types in SQuirreL via the 
            DB2 Plugin (tested against DB2 v9.5 LUW)

Oracle Plugin:
 - Added validity (VALID|INVALID) field to trigger details tab for triggers.
 - Allow the user to configure whether or not to show the syntax error offset in 
   the SQL Editor.  This feature creates a user-defined function called 
   SQUIRREL_GET_ERROR_OFFSET, which can be disabled.
 - Added ability to recognize "create package" and "create package body" statements.   

PostgreSQL Plugin:
 - Added support for PostgreSQL(8.3.x) new xml type.

 Contributions from Daniel Regli and Yannick Winiger:
 - Menu: added a new "PostgreSQL" menu to the object tree and the session menu for
   Postgres specific functionalities.
 - Vacuum: added visual (dialog) support for the PostgreSQL-specific VACUUM statement for
   garbage-collecting a selection of tables or the whole database.
 - Explain: added an additional SQLResultExecuter to the sql panel that shows