@@ -36,6 +36,8 @@ TablePopupMenu.copy=Copy
 TablePopupMenu.copyWithHeaders=Copy with headers
 TablePopupMenu.copyashtml=Copy as HTML
 TablePopupMenu.copyasinstatement=Copy as SQL IN statement
+TablePopupMenu.copyaswherestatement=Copy as SQL WHERE statement
+TablePopupMenu.copyasupdatestatement=Copy as SQL UPDATE-SET statement
 TablePopupMenu.export=Export CSV / MS Excel ...
 TablePopupMenu.cut=Cut
 TablePopupMenu.makeeditable=Make Editable
